--- a/WarsawCityGame/app/src/main/res/layout/activity_main.xml
+++ b/WarsawCityGame/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="#00000000"
-    tools:context="com.warsawcitygame.MainActivity">
+    tools:context=".Activities.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
