--- a/WarsawCityGame/app/src/main/res/layout/activity_splash.xml
+++ b/WarsawCityGame/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-    <com.warsawcitygame.KenBurnsView
+    <com.warsawcitygame.CustomControls.KenBurnsView
         android:id="@+id/ken_burns_images"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
@@ -20,7 +20,7 @@
         android:src="@drawable/logo"
         android:contentDescription="@string/imageDesc" />
 
-    <com.warsawcitygame.RobotoTextView
+    <com.warsawcitygame.CustomControls.RobotoTextView
         android:id="@+id/welcome_text"
         style="@style/TextViewAppearance.Headline2"
         android:layout_width="wrap_content"
