login activity login (so far very mocked, new threads will be needed and some joins i guess)

--- a/WarsawCityGame/app/src/main/res/layout/activity_login.xml
+++ b/WarsawCityGame/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
             <EditText
                 android:layout_width="150sp"
                 android:layout_height="wrap_content"
-                android:id="@+id/editText"
+                android:id="@+id/loginTxt"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
@@ -46,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/PasswordText"
-                android:id="@+id/textView2"
+                android:id="@+id/passwordTxt"
                 android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
@@ -67,7 +67,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/LogIntoText"
-                android:id="@+id/button"
+                android:id="@+id/loginButton"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
@@ -93,7 +93,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/RegisterText"
-                android:id="@+id/button2"
+                android:id="@+id/registerButton"
                 android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
