--- a/WarsawCityGame/app/src/main/res/layout/activity_login.xml
+++ b/WarsawCityGame/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,8 @@
     <com.warsawcitygame.CustomControls.KenBurnsView
         android:id="@+id/ken_burns_images"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +17,9 @@
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
-        android:layout_centerVertical="true">
+        android:layout_centerVertical="true"
+        android:id="@+id/loginElementsLayout"
+        >
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
