--- a/WarsawCityGame/app/src/main/res/layout/activity_register.xml
+++ b/WarsawCityGame/app/src/main/res/layout/activity_register.xml
@@ -16,7 +16,8 @@
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
-        android:layout_centerVertical="true">
+        android:layout_centerVertical="true"
+        android:id="@+id/registerElementsLayout">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
