--- a/WarsawCityGame/app/src/main/res/layout/activity_splash.xml
+++ b/WarsawCityGame/app/src/main/res/layout/activity_splash.xml
@@ -9,7 +9,13 @@
         android:id="@+id/ken_burns_images"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_centerHorizontal="true"
+    android:gravity="center_horizontal"
+    android:id="@+id/splashElementsLayout">
     <ImageView
         android:id="@+id/imagelogo"
         android:layout_width="wrap_content"
@@ -31,5 +37,5 @@
         android:alpha="0.0"
         android:text="@string/app_name"
         android:textColor="@color/global_color_primary_light" />
-
+</LinearLayout>
 </RelativeLayout>
