--- a/WarsawCityGame/app/src/main/res/layout/activity_register.xml
+++ b/WarsawCityGame/app/src/main/res/layout/activity_register.xml
@@ -47,7 +47,6 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/PasswordText"
-                android:id="@+id/passwordTxt"
                 android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
@@ -56,7 +55,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:ems="10"
-                android:id="@+id/editText2"
+                android:id="@+id/passwordTxt"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true" />
@@ -84,6 +83,15 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/backTxt"
+                android:id="@+id/backButton"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                style="@style/roundedbutton"/>
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
