--- a/WarsawCityGame/app/src/main/res/values/styles.xml
+++ b/WarsawCityGame/app/src/main/res/values/styles.xml
@@ -32,5 +32,10 @@
         <!-- Supports API Level 17+ -->
         <!-- <item name="android:paddingEnd">26dp</item> -->
     </style>
+    <style name="Theme_Dialog" parent="android:Theme.Holo.Dialog">
+        <item name="android:windowMinWidthMajor">100%</item>
+    </style>
+
+
 
 </resources>
