--- a/WarsawCityGame/app/src/main/res/layout/fragment_profile.xml
+++ b/WarsawCityGame/app/src/main/res/layout/fragment_profile.xml
@@ -17,7 +17,8 @@
             android:layout_height="100dp"
             android:layout_gravity="center"
             android:layout_marginBottom="10dp"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="20dp"
+            android:src="@drawable/tiger"/>
         <TextView
             android:id="@+id/userNameTop"
             android:layout_width="wrap_content"
