--- a/WarsawCityGame/app/src/main/res/layout/gridview_row.xml
+++ b/WarsawCityGame/app/src/main/res/layout/gridview_row.xml
@@ -24,6 +24,7 @@
         android:layout_below="@+id/imageView1"
         android:layout_marginTop="2dp"
         android:layout_centerHorizontal="true"
+        android:textAlignment="center"
         android:textSize="9sp"
         android:textColor="#000000"
         android:ellipsize="marquee"></TextView>
