--- a/WarsawCityGame/app/src/main/res/layout/fragment_get_mission.xml
+++ b/WarsawCityGame/app/src/main/res/layout/fragment_get_mission.xml
@@ -3,91 +3,89 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_centerHorizontal="true"
+    android:background="@drawable/main_header_selector_top"
     android:orientation="vertical"
-    android:weightSum="100"
-    android:background="@drawable/main_header_selector_top">
+    android:weightSum="100">
+
     <ImageView
+        android:id="@+id/placePic"
         android:layout_width="match_parent"
         android:layout_height="400dp"
         android:layout_gravity="top"
-        android:id="@+id/placePic"
 
         />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="15dp"
             android:orientation="horizontal"
-            android:weightSum="10"
-            >
+            android:weightSum="10">
+
+
 
             <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_weight="1.5">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:src="@drawable/leftarrows"
-                    android:id="@+id/lefftButton" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:gravity="bottom"
-                android:layout_weight="7"
-                android:orientation="vertical">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif"
-                    android:textColor="#000000"
-                    android:textSize="20dp"
-                    android:textAlignment="center"
-                    android:text=""/>
+                android:orientation="vertical"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp">
+
+
 
                 <TextView
+                    android:id="@+id/placeDescription"
                     android:layout_width="match_parent"
                     android:layout_height="46dp"
                     android:fontFamily="sans-serif-thin"
                     android:textColor="#000000"
-                    android:textStyle="italic"
-                    android:id="@+id/placeDescription"
-                    />
+                    android:textStyle="italic" />
+
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="46dp"
-                    android:fontFamily="sans-serif"
-                    android:textColor="#FF0000"
-                    android:textAlignment="viewEnd"
-                    android:gravity="end"
                     android:id="@+id/questExp"
-                    android:text="EXP: 500"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_weight="1.5">
-
-                <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:src="@drawable/rightarrows"
-                    android:id="@+id/rightButton" />
+                    android:fontFamily="sans-serif"
+                    android:gravity="end"
+                    android:text="EXP: 500"
+                    android:textAlignment="viewEnd"
+                    android:textColor="#FF0000" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center_horizontal"
+                    >
+
+                    <ImageView
+                        android:id="@+id/lefftButton"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/leftarrows"
+                        android:layout_marginRight="20dp"
+                        />
+                    <ImageView
+                        android:id="@+id/rightButton"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/rightarrows"
+                        android:layout_marginLeft="20dp"
+                        />
+                </LinearLayout>
             </LinearLayout>
+
+
         </LinearLayout>
     </LinearLayout>
 
@@ -103,19 +101,19 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_gravity="center"
+            android:layout_marginBottom="5dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
-            android:layout_marginBottom="5dp"
             android:background="#00BFFF"
             android:text="Get it !" />
+
         <TextView
+            android:id="@+id/missionacceptedId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/missionacceptedId"
-            android:textAlignment="center"
-            android:textColor="#000000"
             android:fontFamily="sans-serif"
             android:text="Mission accepted!"
-            />
+            android:textAlignment="center"
+            android:textColor="#000000" />
     </LinearLayout>
 </LinearLayout>
