--- a/WarsawCityGame/app/src/main/res/values/styles.xml
+++ b/WarsawCityGame/app/src/main/res/values/styles.xml
@@ -19,6 +19,12 @@
         <item name="android:layout_margin">5dp</item>
     </style>
 
+    <style name="roundedbuttontransparent">
+        <item name="android:layout_width">200dp</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:background">@drawable/roundedbuttontransparent</item>
+        <item name="android:layout_margin">5dp</item>
+    </style>
     <style name="TextViewAppearance" parent="@android:style/TextAppearance.Widget.TextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
