--- a/WarsawCityGame/app/src/main/res/layout/fragment_get_mission.xml
+++ b/WarsawCityGame/app/src/main/res/layout/fragment_get_mission.xml
@@ -7,9 +7,11 @@
     android:orientation="vertical"
     android:weightSum="100">
 
-    <ImageView
+    <com.warsawcitygame.CustomControls.MLRoundedImageView
         android:id="@+id/placePic"
         android:layout_width="match_parent"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="6dp"
         android:layout_height="400dp"
         android:layout_gravity="top"
 
