--- a/WarsawCityGame/app/src/main/res/values/colors.xml
+++ b/WarsawCityGame/app/src/main/res/values/colors.xml
@@ -15,4 +15,6 @@
     <color name="list_divider">#272727</color>
     <color name="counter_text_bg">#626262</color>
     <color name="counter_text_color">#c5c4c4</color>
+    <color name="deepSkyBlue">#00BFFF</color>
+    <color name="windowsGreen">#00A600</color>
 </resources>
