--- a/WarsawCityGame/app/src/main/res/layout/friend_search_result.xml
+++ b/WarsawCityGame/app/src/main/res/layout/friend_search_result.xml
@@ -26,5 +26,6 @@
         android:textColor="#000000"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"/>
+        android:layout_marginRight="10dp"
+        android:id="@+id/addFriendButton"/>
 </RelativeLayout>
