--- a/WarsawCityGame/app/src/main/res/layout/fragment_current_mission.xml
+++ b/WarsawCityGame/app/src/main/res/layout/fragment_current_mission.xml
@@ -24,7 +24,9 @@
             android:textColor="#ffffff"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="30sp" />
+
     </LinearLayout>
+   layout_alignParentStart="true">
 
     <Button
         android:id="@+id/abortButton"
@@ -33,14 +35,14 @@
         android:text="Abort mission"
         android:maxWidth="100dp"
         android:maxHeight="100dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:textColor="#ffffff"
         android:background="#ff4040"
-        android:clickable="true" />
+        android:clickable="true"
+        android:layout_above="@+id/doneButton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 
     <TextView
@@ -101,5 +103,17 @@
         android:layout_below="@+id/currMissionTop"
         android:layout_centerHorizontal="true" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Done!"
+        android:id="@+id/doneButton"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:background="#62ff00"
+        android:textColor="#ffffff" />
 
 </RelativeLayout>
