--- a/WarsawCityGame/app/src/main/res/values/dimens.xml
+++ b/WarsawCityGame/app/src/main/res/values/dimens.xml
@@ -4,5 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="mb_height_56">56dp</dimen>
-
+    <dimen name="proba">15sp</dimen>
 </resources>
