--- a/WarsawCityGame/app/src/main/res/values/styles.xml
+++ b/WarsawCityGame/app/src/main/res/values/styles.xml
@@ -20,7 +20,10 @@
         <item name="android:background">@drawable/roundedbutton</item>
         <item name="android:layout_margin">5dp</item>
     </style>
-
+    <style name="roundedbuttonorange">
+        <item name="android:layout_gravity">end</item>
+        <item name="android:background">@drawable/roundedbuttonorange</item>
+    </style>
     <style name="roundedbuttontransparent">
         <item name="android:layout_width">200dp</item>
         <item name="android:layout_gravity">center_horizontal</item>
