--- a/WarsawCityGame/app/src/main/res/layout/dialog_confirmation_layout.xml
+++ b/WarsawCityGame/app/src/main/res/layout/dialog_confirmation_layout.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textSize="12sp"
-        android:text="Sample description"
+        android:text="Are you sure?"
         android:textColor="#000000"
         android:layout_marginTop="5dp"
         android:id="@+id/description"/>
@@ -25,7 +25,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             style="@style/roundedbutton"
-            android:text="Cancel"
+            android:text="NO"
             android:id="@+id/negativeButton"/>
         <Button
             android:layout_width="wrap_content"
@@ -33,7 +33,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             style="@style/roundedbutton"
-            android:text="Save"
+            android:text="YES"
             android:id="@+id/positiveButton"/>
     </RelativeLayout>
 </LinearLayout>
