--- a/WarsawCityGame/app/src/main/res/layout/fragment_current_mission.xml
+++ b/WarsawCityGame/app/src/main/res/layout/fragment_current_mission.xml
@@ -9,8 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#00BFFF"
-        android:gravity="center"
-        android:orientation="vertical"
+        android:gravity="center_horizontal|center_vertical"
+        android:orientation="horizontal"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
@@ -18,8 +20,7 @@
             android:id="@+id/currMissionTopName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="12dp"
+            android:layout_gravity="center_vertical|center_horizontal"
             android:text="Current Mission"
             android:textColor="#ffffff"
             android:textAppearance="?android:attr/textAppearanceLarge"
@@ -48,13 +49,15 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
+        android:textSize="18sp"
         android:layout_marginTop="20dp"
         android:textColor="#000000"
         android:fontFamily="sans-serif-thin"
         android:text="@string/missionTxt"
         android:id="@+id/textMission"
         android:layout_centerVertical="true"
+        android:layout_below="@+id/textView4"
+        android:layout_above="@+id/button2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -73,13 +76,6 @@
         android:layout_alignParentEnd="true"
         android:contextClickable="false" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:src="@drawable/map_icon"
-        android:layout_above="@+id/button2"
-        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
