--- a/WarsawCityGame/app/src/main/res/layout/fragment_get_mission.xml
+++ b/WarsawCityGame/app/src/main/res/layout/fragment_get_mission.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:weightSum="100">
 
-    <com.warsawcitygame.CustomControls.MLRoundedImageView
+    <ImageView
         android:id="@+id/placePic"
         android:layout_width="match_parent"
         android:layout_marginTop="6dp"
