--- a/WarsawCityGame/app/src/main/res/layout/friend_search_result.xml
+++ b/WarsawCityGame/app/src/main/res/layout/friend_search_result.xml
@@ -23,7 +23,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="30dp"
-        android:text="Dodaj"
+        android:text="ADD"
         android:textColor="#000000"
         android:layout_alignParentRight="true"
         android:layout_marginRight="50dp"
