--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/activity_register.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical">
     <com.warsawcitygame.CustomControls.KenBurnsView
-        android:id="@+id/ken_burns_images"
+        android:id="@+id/splash_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -24,7 +24,7 @@
             <EditText
                 android:layout_width="150sp"
                 android:layout_height="wrap_content"
-                android:id="@+id/loginTxt"
+                android:id="@+id/login_textview"
                 android:fontFamily="sans-serif-light"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
@@ -62,7 +62,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:ems="10"
-                android:id="@+id/passwordTxt"
+                android:id="@+id/password_textview"
                 android:fontFamily="sans-serif-light"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
@@ -115,7 +115,7 @@
                 android:text="@string/ForceRegisterText"
                 android:fontFamily="sans-serif-light"
                 android:textColor="#FFFFFF"
-                android:id="@+id/registerButton"
+                android:id="@+id/register_button"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
