register activity refactoring

--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/activity_register.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/activity_register.xml
@@ -24,7 +24,7 @@
             <EditText
                 android:layout_width="150sp"
                 android:layout_height="wrap_content"
-                android:id="@+id/login_textview"
+                android:id="@+id/login"
                 android:fontFamily="sans-serif-light"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
@@ -62,7 +62,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:ems="10"
-                android:id="@+id/password_textview"
+                android:id="@+id/password"
                 android:fontFamily="sans-serif-light"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
@@ -86,7 +86,7 @@
             <EditText
                 android:layout_width="150sp"
                 android:layout_height="wrap_content"
-                android:id="@+id/emailTxt"
+                android:id="@+id/email"
                 android:fontFamily="sans-serif-light"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
@@ -102,7 +102,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/backTxt"
-                android:id="@+id/backButton"
+                android:id="@+id/back_button"
                 android:fontFamily="sans-serif-light"
                 android:textColor="#FFFFFF"
                 android:layout_centerVertical="true"
