--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/activity_login.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/activity_login.xml
@@ -38,7 +38,7 @@
                 android:layout_weight=".63"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-light"
-                android:id="@+id/login_textview"
+                android:id="@+id/login"
                 />
         </LinearLayout>
         <LinearLayout
@@ -61,7 +61,7 @@
                 android:inputType="textPassword"
                 android:ems="10"
                 android:fontFamily="sans-serif-light"
-                android:id="@+id/password_textview"
+                android:id="@+id/password"
                 />
         </LinearLayout>
         <LinearLayout
