--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/fragment_current_mission.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/fragment_current_mission.xml
@@ -30,7 +30,7 @@
    layout_alignParentStart="true">
 
     <Button
-        android:id="@+id/abortButton"
+        android:id="@+id/abort_mission_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Abort mission"
@@ -39,7 +39,7 @@
         android:textColor="#ffffff"
         android:background="#ff4040"
         android:clickable="true"
-        android:layout_above="@+id/doneButton"
+        android:layout_above="@+id/acomplish_mission_button"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
@@ -57,7 +57,7 @@
         android:id="@+id/textMission"
         android:layout_centerVertical="true"
         android:layout_below="@+id/textView4"
-        android:layout_above="@+id/button2"
+        android:layout_above="@+id/map_button"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -69,7 +69,7 @@
         android:id="@+id/button2"
         android:textColor="#ffffff"
         android:clickable="true"
-        android:layout_above="@+id/abortButton"
+        android:layout_above="@+id/abort_mission_button"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
