Logging and registration configuration (server and android). It works but kind of bugged (no validation on both sides).

--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/activity_login.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/activity_login.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:orientation="vertical">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:fitsSystemWindows="true"
+                android:orientation="vertical"
+                tools:context="com.warsawcitygame.Activities.LoginActivity">
     <com.warsawcitygame.CustomControls.KenBurnsView
         android:id="@+id/splash_background"
         android:layout_width="match_parent"
