general fixes in login/register activity. adjusting text limit in edittexts. some margins adjusted in popups. logged in user is remembered in app. by clicking logout button he becomes not logged in again.

--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/activity_register.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/activity_register.xml
@@ -31,6 +31,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
+                android:maxLength="10"
                 />
             <TextView
                 android:layout_width="wrap_content"
@@ -61,6 +62,7 @@
                 android:layout_width="150sp"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
+                android:maxLength="10"
                 android:ems="10"
                 android:id="@+id/password"
                 android:fontFamily="sans-serif-light"
@@ -87,6 +89,7 @@
                 android:layout_width="150sp"
                 android:layout_height="wrap_content"
                 android:id="@+id/email"
+                android:maxLength="10"
                 android:fontFamily="sans-serif-light"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
