--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/values/styles.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/values/styles.xml
@@ -7,7 +7,14 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    <style name="TransparentStretchedDialog" parent="android:Theme.Dialog">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
     <style name="TextViewAppearance.Headline2" parent="@style/TextViewAppearance">
         <item name="typeface">robotoLight</item>
         <item name="android:textSize">24sp</item>
