--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/activity_login.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/activity_login.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                xmlns:tools="http://schemas.android.com/tools"
                 android:fitsSystemWindows="true"
                 android:orientation="vertical"
                 tools:context="com.warsawcitygame.Activities.LoginActivity">
+
     <com.warsawcitygame.CustomControls.KenBurnsView
         android:id="@+id/splash_background"
         android:layout_width="match_parent"
@@ -13,100 +14,115 @@
         />
 
     <LinearLayout
+        android:id="@+id/loginElementsLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_centerVertical="true"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
-        android:layout_centerVertical="true"
-        android:id="@+id/loginElementsLayout"
+        android:orientation="vertical"
         >
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <TextView
+                android:id="@+id/textView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".37"
-                android:text="@string/LoginText"
                 android:fontFamily="sans-serif-light"
+                android:text="@string/LoginText"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
-                android:id="@+id/textView"
                 />
+
             <EditText
-                android:layout_width="0dp"
-                android:layout_weight=".63"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-light"
                 android:id="@+id/login"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".63"
+                android:fontFamily="sans-serif-light"
+                android:maxLength="10"
                 />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp">
+
             <TextView
+                android:id="@+id/editText2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".37"
-                android:textSize="20sp"
-                android:text="@string/PasswordText"
                 android:fontFamily="sans-serif-light"
+                android:text="@string/PasswordText"
                 android:textColor="#FFFFFF"
-                android:id="@+id/editText2"
+                android:textSize="20sp"
                 />
+
             <EditText
+                android:id="@+id/password"
                 android:layout_width="0dp"
-                android:layout_weight=".63"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
+                android:layout_weight=".63"
                 android:ems="10"
                 android:fontFamily="sans-serif-light"
-                android:id="@+id/password"
+                android:inputType="textPassword"
+                android:maxLength="10"
                 />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <Button
-                android:layout_width="0dp"
-                android:layout_weight="0.4"
-                android:layout_height="wrap_content"
-                android:text="@string/LogIntoText"
                 android:id="@+id/login_button"
+                style="@style/roundedbuttontransparent"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.4"
                 android:fontFamily="sans-serif-light"
-                style="@style/roundedbuttontransparent"/>
+                android:text="@string/LogIntoText"/>
         </LinearLayout>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="20dp">
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="50dp">
+
             <TextView
+                android:id="@+id/textView3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="@string/RegisterDescriptionText"
-                android:id="@+id/textView3"
-                android:textAlignment="center"
-                android:fontFamily="sans-serif-light"
-                android:textColor="#FFFFFF"
-                android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"/>
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:fontFamily="sans-serif-light"
+                android:text="@string/RegisterDescriptionText"
+                android:textAlignment="center"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#FFFFFF"/>
         </RelativeLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <Button
-                android:layout_width="0dp"
-                android:layout_weight="0.4"
-                android:layout_height="wrap_content"
-                android:text="@string/RegisterText"
-                android:fontFamily="sans-serif-light"
                 android:id="@+id/register_button"
-                style="@style/roundedbuttontransparent"/>
+                style="@style/roundedbuttontransparent"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.4"
+                android:fontFamily="sans-serif-light"
+                android:text="@string/RegisterText"/>
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
