--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/dialog_error.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/dialog_error.xml
@@ -27,7 +27,10 @@
         android:layout_height="wrap_content"
         android:text="#FFFFFF"
         android:layout_marginTop="20dp"
+        android:width="50dp"
+        android:height="30dp"
+        android:fontFamily="sans-serif-light"
         android:layout_gravity="right"
-        android:background="#00BFFF"
+        style="@style/roundedbuttontransparent"
         android:id="@+id/error_dismiss"/>
 </LinearLayout>
