--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/fragment_profile.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/fragment_profile.xml
@@ -18,7 +18,7 @@
             android:layout_gravity="center"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="20dp"
-            android:src="@drawable/tiger"/>
+            android:src="@drawable/default_image"/>
         <TextView
             android:id="@+id/userNameEditable"
             android:layout_width="wrap_content"
