--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/dialog_confirmation.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/dialog_confirmation.xml
@@ -1,39 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="#FFFFFF"
-    style="@style/Theme_Dialog">
+<LinearLayout style="@style/Theme_Dialog"
+              xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="vertical"
+              android:paddingBottom="20dp"
+              android:paddingTop="20dp"
+              android:weightSum="100">
+
     <TextView
+        android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:textSize="12sp"
-        android:text="Are you sure?"
-        android:textColor="#000000"
         android:layout_marginTop="5dp"
-        android:id="@+id/description"/>
+        android:text="Are you sure?"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="12sp"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp">
+
         <Button
+            android:id="@+id/negativeButton"
+            style="@style/roundedbutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            style="@style/roundedbutton"
-            android:text="NO"
-            android:id="@+id/negativeButton"/>
+            android:text="NO"/>
+
         <Button
+            android:id="@+id/positiveButton"
+            style="@style/roundedbutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            style="@style/roundedbutton"
-            android:text="YES"
-            android:id="@+id/positiveButton"/>
+            android:layout_alignParentRight="true"
+            android:text="YES"/>
     </RelativeLayout>
 </LinearLayout>
