--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/dialog_edit_text.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/dialog_edit_text.xml
@@ -1,47 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="#FFFFFF"
-    style="@style/Theme_Dialog">
+<LinearLayout style="@style/Theme_Dialog"
+              xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="#FFFFFF"
+              android:orientation="vertical"
+              android:paddingBottom="20dp"
+              android:paddingTop="20dp"
+              android:weightSum="100">
+
     <TextView
+        android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:textSize="12sp"
-        android:text="Sample description"
-        android:textColor="#000000"
         android:layout_marginTop="5dp"
-        android:id="@+id/description"/>
+        android:text="Sample description"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="12sp"/>
+
     <EditText
-        android:layout_width="match_parent"
         android:id="@+id/editable_text"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:text="sample text"
         android:textAlignment="center"
         android:textColor="#00BFFF"
-        android:text="sample text"
-        android:textColorHint="#00BFFF"/>
+        android:textColorHint="#00BFFF"
+        android:textSize="20sp"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp">
+
         <Button
+            android:id="@+id/negativeButton"
+            style="@style/roundedbutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            style="@style/roundedbutton"
-            android:text="Cancel"
-            android:id="@+id/negativeButton"/>
+            android:text="Cancel"/>
+
         <Button
+            android:id="@+id/positiveButton"
+            style="@style/roundedbutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            style="@style/roundedbutton"
-            android:text="Save"
-            android:id="@+id/positiveButton"/>
+            android:layout_alignParentRight="true"
+            android:text="Save"/>
     </RelativeLayout>
 </LinearLayout>
