--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/dialog_error.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/dialog_error.xml
@@ -1,36 +1,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:weightSum="100"
-              android:paddingTop="20dp"
+              android:background="#FFFFFF"
+              android:orientation="vertical"
               android:paddingBottom="20dp"
-              android:paddingLeft="20dp"
-              android:paddingRight="20dp"
-              android:background="#FFFFFF">
+              android:paddingTop="20dp"
+              android:weightSum="100">
+
     <TextView
+        android:id="@+id/error_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
         android:layout_gravity="left"
         android:textColor="#00BFFF"
-        android:id="@+id/error_title" />
+        android:textSize="30sp"/>
+
     <TextView
+        android:id="@+id/error_msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="13sp"
         android:layout_gravity="left"
         android:textColor="#00BFFF"
-        android:id="@+id/error_msg" />
+        android:textSize="13sp"/>
+
     <Button
+        android:id="@+id/error_dismiss"
+        style="@style/roundedbuttontransparent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="#FFFFFF"
+        android:layout_gravity="right"
         android:layout_marginTop="20dp"
         android:width="50dp"
         android:height="30dp"
         android:fontFamily="sans-serif-light"
-        android:layout_gravity="right"
-        style="@style/roundedbuttontransparent"
-        android:id="@+id/error_dismiss"/>
+        android:text="#FFFFFF"/>
 </LinearLayout>
