--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/dialog_popup_information.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/dialog_popup_information.xml
@@ -1,43 +1,46 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#ffffffff">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="#FFFFFF"
+              android:orientation="vertical"
+              android:paddingBottom="20dp"
+              android:paddingTop="20dp"
+              android:weightSum="100">
 
     <ImageView
+        android:id="@+id/a"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:id="@+id/a"
-        android:gravity="center"
         android:background="#00BFFF"
-        android:src="@drawable/checked"
-        android:scaleType="fitCenter" />
+        android:gravity="center"
+        android:scaleType="fitCenter"
+        android:src="@drawable/checked"/>
 
     <TextView
+        android:id="@+id/text_dialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TEXTO"
-        android:id="@+id/text_dialog"
         android:layout_below="@+id/a"
-        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        android:layout_marginBottom="20dp"
-        android:textSize="18sp"
+        android:layout_marginTop="20dp"
+        android:gravity="center_horizontal"
+        android:text="TEXTO"
         android:textColor="#ff000000"
-        android:layout_centerHorizontal="true"
-        android:gravity="center_horizontal" />
+        android:textSize="18sp"/>
 
     <Button
+        android:id="@+id/btn_dialog"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
-        android:text="OK"
-        android:id="@+id/btn_dialog"
-        android:gravity="center_vertical|center_horizontal"
         android:layout_below="@+id/text_dialog"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
         android:background="#00BFFF"
-        android:layout_centerHorizontal="true"
-        android:textColor="#ffffffff" />
+        android:gravity="center_vertical|center_horizontal"
+        android:text="OK"
+        android:textColor="#ffffffff"/>
 
-</RelativeLayout>
+</LinearLayout>
