--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/dialog_profile.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/dialog_profile.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#FFFFFF">
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="#FFFFFF"
+              android:orientation="vertical"
+              android:paddingBottom="20dp"
+              android:paddingTop="20dp"
+              android:weightSum="100">
+
     <com.warsawcitygame.CustomControls.MLRoundedImageView
         android:id="@+id/profilePic"
         android:layout_width="140dp"
@@ -11,37 +16,40 @@
         android:layout_marginBottom="10dp"
         android:layout_marginTop="20dp"
         android:src="@drawable/tiger"/>
+
     <TextView
         android:id="@+id/userNameTop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
         android:layout_gravity="center"
         android:layout_marginBottom="10dp"
         android:text="Tajger"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="30sp" />
+        android:textColor="#000000"
+        android:textSize="30sp"/>
+
     <TextView
         android:id="@+id/level"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:textColor="#00BFFF"
         android:layout_marginBottom="10dp"
         android:text="Lvl. 7 Kurczak"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textSize="22sp" />
+        android:textColor="#00BFFF"
+        android:textSize="22sp"/>
+
     <Button
+        android:id="@+id/btn_dialog"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
-        android:text="OK"
-        android:id="@+id/btn_dialog"
-        android:layout_marginTop="10dp"
-        android:gravity="center_vertical|center_horizontal"
         android:layout_below="@+id/text_dialog"
-        android:layout_marginBottom="20dp"
-        android:background="#00BFFF"
-        android:layout_gravity="center_horizontal"
         android:layout_centerHorizontal="true"
-        android:textColor="#ffffffff" />
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="10dp"
+        android:background="#00BFFF"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="OK"
+        android:textColor="#ffffffff"/>
 </LinearLayout>
