--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/friend_list_item.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/friend_list_item.xml
@@ -2,13 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <com.warsawcitygame.CustomControls.MLRoundedImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="55dp"
         android:layout_height="55dp"
-        android:src="@drawable/tiger"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="40dp"
+        android:src="@drawable/default_image"
+        android:id="@+id/friendAvatar"
         />
     <TextView
         android:layout_width="wrap_content"
