getting all mission working

--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/fragment_get_mission.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/fragment_get_mission.xml
@@ -56,7 +56,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif"
                     android:gravity="end"
-                    android:text="EXP: 500"
+                    android:text=""
                     android:textAlignment="viewEnd"
                     android:textColor="#FF0000" />
 
